package com.festu.pomodoro.model;

import lombok.*;


@Getter
@Setter
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class Duration {

    Integer hours;

    Integer minutes;

}
