@startuml

class Pomodoro {
    UUID id
    String title
    Tag tag
    Duration workDuration
    Duration restDuration
    User user
}

entity Duration {
    int hours
    int minutes
}

class Tag {
    string title
}

entity User {
    UUID id
    string username
}

Pomodoro --> Duration
Pomodoro --> User
Pomodoro --> Tag

@enduml